invalid_no_arg_keywords_test/invalid_no_arg_keywords_test_6.src
.IPPcode24
CREATEFRAME int